Fix CORS configuration for production
- Update CorsConfig to use explicit header list instead of wildcard
- Add better logging to GlobalCorsController for debugging
- Ensure CORS headers are set correctly for all requests